force-app/main/default/objects/Asset/fields/Application_Mode__c.field-meta.xml
<CustomField>
    <fullName>Application_Mode__c</fullName>
    <label>Application Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self with video call</fullName>
            </value>
            <value>
                <fullName>Home visit</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>