force-app/main/default/objects/Asset/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CGM sensor</fullName>
            </value>
            <value>
                <fullName>CGM reader</fullName>
            </value>
            <value>
                <fullName>Glucometer</fullName>
            </value>
            <value>
                <fullName>Smart scale</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>