force-app/main/default/objects/Asset/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <length>30</length>
    <type>Text</type>
</CustomField>